--- a/src/components/pagination/ListPagination/ListPagination.module.scss
+++ b/src/components/pagination/ListPagination/ListPagination.module.scss
@@ -13,6 +13,9 @@
   font-weight: 400;
   line-height: 9px; /* 81.818% */
   margin-left: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .pagination_container {
