--- a/src/components/inputs/Checkbox/Checkbox.module.scss
+++ b/src/components/inputs/Checkbox/Checkbox.module.scss
@@ -6,16 +6,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 1rem;
   outline: 0;
   color: #9b9b9b;
   cursor: 'pointer';
-  text-align: 'left';
   border-radius: 3.068px;
   width: 16px;
   height: 16px;
-  box-sizing: border-box;
   margin-left: 20px;
+  padding: 0
 }
 
 .checkbox {
@@ -32,7 +30,6 @@
     &_checked {
       @include CheckboxButton;
 
-      padding-bottom: 2px;
       border: var(
           --user-accent-color-uac-light,
           $lightBlue
