feat: user - info

--- a/src/components/buttons/SectionHeaderButton/SectionHeaderButton.module.scss
+++ b/src/components/buttons/SectionHeaderButton/SectionHeaderButton.module.scss
@@ -16,7 +16,7 @@
   padding: 13px 0;
 
   &__text {
-    color: $white;
+    color: #fff;
     font-family: Oxygen;
     font-size: 12px;
     font-style: normal;
