--- a/src/components/inputs/InputWithImage/InputWithImage.module.scss
+++ b/src/components/inputs/InputWithImage/InputWithImage.module.scss
@@ -2,8 +2,33 @@
 
 @import '../../../configs/theme/theme-variables.scss';
 
+@mixin Input {
+  width: 341px;
+  height: 61px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  border: 1px solid #e6e6e6;
+  background: $white;
+  margin-bottom: 17px;
+  padding-left: 34px;
+  box-sizing: border-box;
+
+  &:focus {
+    border: 1px solid #8ac0ff;
+  }
+
+  &:active {
+    border: 1px solid #8ac0ff;
+  }
+  &:hover {
+    border: 1px solid #8ac0ff;
+  }
+}
+
 .input_container {
   position: relative;
+
+  
   & .input_icon {
     position: absolute;
     margin-top: 26px;
@@ -13,26 +38,12 @@
     fill: #e6e6e6;
   }
 
-  & input {
-    width: 341px;
-    height: 61px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    border: 1px solid #e6e6e6;
-    background: $white;
-    margin-bottom: 17px;
-    padding-left: 34px;
-    box-sizing: border-box;
+  &__field {
+    @include Input;
 
-    &:focus {
-      border: 1px solid #8ac0ff;
-    }
-
-    &:active {
-      border: 1px solid #8ac0ff;
-    }
-    &:hover {
-      border: 1px solid #8ac0ff;
+    &_error {
+      @include Input;
+      border: 1px solid #f44848;
     }
   }
 }
