feat: show user

--- a/src/components/lists/TableList/TableList.module.scss
+++ b/src/components/lists/TableList/TableList.module.scss
@@ -13,8 +13,6 @@
     height: 35px;
     background: #fafbff;
 
-    
-
     th {
       color: #1f263e;
       font-family: Oxygen;
@@ -54,12 +52,12 @@
       background: #e6ecfe;
     }
 
-    td {
+    div {
       color: #1f263e;
       font-family: Oxygen;
       font-size: 13px;
       font-style: normal;
-      font-weight: 400;
+      font-weight: lighter;
       line-height: normal;
     }
   }
