--- a/src/components/info-cards/UserProfileInfoCard/UserProfileInfoCard.module.scss
+++ b/src/components/info-cards/UserProfileInfoCard/UserProfileInfoCard.module.scss
@@ -1,9 +1,6 @@
 /** @format */
 
 @import '../../../configs/theme/theme-variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Inter&family=Oxygen&display=swap');
 
 .profile_card {
   width: 277px;
@@ -27,7 +24,7 @@
   &__name {
     color: #000;
     font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Oxygen;
+    font-family: Oxygen, sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: bolder;
@@ -37,7 +34,7 @@
   &__role {
     color: #979797;
     font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Oxygen;
+    font-family: Oxygen , sans-serif;
     font-size: 11px;
     font-style: normal;
     font-weight: 300;
