--- a/src/components/layout/SectionHeader/SectionHeader.module.scss
+++ b/src/components/layout/SectionHeader/SectionHeader.module.scss
@@ -8,7 +8,7 @@
 
   &__text {
     color: #000a12;
-    font-family: Oxygen;
+    font-family: Oxygen, sans-serif;
     font-size: 15px;
     font-style: normal;
     font-weight: 700;
