--- a/src/pages/UserInfo/UserInfo.module.scss
+++ b/src/pages/UserInfo/UserInfo.module.scss
@@ -1,13 +1,12 @@
 /** @format */
 @import '../../configs/theme/theme-variables.scss';
-@import url('https://fonts.googleapis.com/css2?family=Oxygen&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-  @import url('https://fonts.googleapis.com/css2?family=Inter&family=Oxygen&display=swap');
 
-.layout {
-  width: 100vw;
-  height: 100vh;
+.user_info {
+  width: 100%;
+  height: 100%;
+  padding: 11px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+  box-sizing: border-box;
 }
