--- a/src/components/text/MenuItem/MenuItem.module.scss
+++ b/src/components/text/MenuItem/MenuItem.module.scss
@@ -24,10 +24,20 @@
     background: #2b344f;
     border-left: 4px solid #70bcfd;
     padding-left: 18px;
+    cursor: pointer;
 
     .bird {
       display: block;
     }
+  }
+  &:hover .menu_text {
+    color: #fff;
+    font-family: Oxygen;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    opacity: 1;
   }
 
   .menu_icon {
