--- a/src/pages/UserList/UserList.module.scss
+++ b/src/pages/UserList/UserList.module.scss
@@ -8,3 +8,11 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.user_list__container {
+  height: calc(100% - 125px);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
