--- a/src/components/inputs/InputWithImage/InputWithImage.module.scss
+++ b/src/components/inputs/InputWithImage/InputWithImage.module.scss
@@ -15,13 +15,18 @@
 
   &:focus {
     border: 1px solid #8ac0ff;
+    outline: none;
   }
 
   &:active {
     border: 1px solid #8ac0ff;
+    outline: none;
+
   }
   &:hover {
     border: 1px solid #8ac0ff;
+    outline: none;
+
   }
 }
 
