--- a/src/components/inputs/ReusableNumberInput copy/ReusableTextInput.module.scss
+++ b/src/components/inputs/ReusableNumberInput copy/ReusableTextInput.module.scss
@@ -11,6 +11,7 @@
   height: 100%;
   box-sizing: border-box;
   gap: 8px;
+  position: relative;
 }
 
 .input_label {
@@ -24,7 +25,8 @@
   text-align: left;
 }
 
-.input_text {
+.input_text,
+.input_text__error {
   width: 100%;
   border-radius: 10px;
   border: 1px solid #c0c0c0;
@@ -32,8 +34,10 @@
   padding: 21px 16px;
   box-sizing: border-box;
   position: relative;
+  height: 100%;
 
-  &:active, &:focus {
+  &:active,
+  &:focus {
     border: 1px solid #008eff;
     background: #fff;
     box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
@@ -49,5 +53,30 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+  }
+}
+
+.input_text__error {
+  border: 1px solid red;
+
+  &:active,
+  &:focus {
+    border: 1px solid red;
+  }
+}
+
+.input__error {
+  border: 1px solid red;
+  &:active,
+  &:focus {
+    border: 1px solid red;
+  }
+  &_message {
+    position: absolute;
+    bottom: -25px;
+    color: red;
+    text-align: center;
+    width: 100%;
+
   }
 }
