--- a/src/components/inputs/ReusableTextArea/ReusableTextArea.module.scss
+++ b/src/components/inputs/ReusableTextArea/ReusableTextArea.module.scss
@@ -11,6 +11,7 @@
   height: 100%;
   box-sizing: border-box;
   gap: 8px;
+  position: relative;
 }
 
 .input_label {
@@ -24,7 +25,7 @@
   text-align: left;
 }
 
-.input_text {
+.input_text, .input_text__error {
   width: 100%;
   border-radius: 10px;
   border: 1px solid #c0c0c0;
@@ -49,5 +50,21 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+  }
+}
+
+.input_text__error {
+  border: 1px solid red;
+  &:active,
+  &:focus {
+    border: 1px solid red;
+  }
+  &_message {
+    position: absolute;
+    bottom: -25px;
+    color: red;
+    text-align: center;
+    width: 100%;
+
   }
 }
