--- a/src/components/inputs/ReusableTextInput/ReusableTextInput.module.scss
+++ b/src/components/inputs/ReusableTextInput/ReusableTextInput.module.scss
@@ -11,6 +11,7 @@
   height: 100%;
   box-sizing: border-box;
   gap: 8px;
+  position: relative;
 }
 
 .input_label {
@@ -24,7 +25,8 @@
   text-align: left;
 }
 
-.input_text {
+.input_text,
+.input_text__error {
   width: 100%;
   border-radius: 10px;
   border: 1px solid #c0c0c0;
@@ -33,7 +35,8 @@
   box-sizing: border-box;
   height: 100%;
   position: relative;
-  &:active, &:focus {
+  &:active,
+  &:focus {
     border: 1px solid #008eff;
     background: #fff;
     outline: none;
@@ -49,5 +52,21 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+  }
+}
+
+.input_text__error {
+  border: 1px solid red;
+  &:active,
+  &:focus {
+    border: 1px solid red;
+  }
+  &_message {
+    position: absolute;
+    bottom: -25px;
+    color: red;
+    text-align: center;
+    width: 100%;
+    margin-left: -16px;
   }
 }
