--- a/src/components/inputs/InputSelect/InputSelect.module.scss
+++ b/src/components/inputs/InputSelect/InputSelect.module.scss
@@ -4,7 +4,6 @@
 
 .input_container {
   position: relative;
-  background-color: white;
 }
 
 .custom_select,
@@ -45,7 +44,8 @@
   margin-bottom: 8px;
 }
 
-.custom_select__header, .custom_select__header__error {
+.custom_select__header,
+.custom_select__header__error {
   width: 100%;
   border-radius: 10px;
   border: 1px solid #c0c0c0;
@@ -82,7 +82,8 @@
   box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 
-  &_container,&_container__error {
+  &_container,
+  &_container__error {
     width: 100%;
     top: 45px;
     position: absolute;
@@ -166,12 +167,51 @@
       text-align: center;
       width: 100%;
       margin-left: -16px;
-
     }
   }
 }
 
-.custom_select__active
-  .input__error_message {
+.custom_select__active .input__error_message {
   display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .custom_select,
+  .custom_select__active {
+    height: 54px;
+  }
+
+  .custom_select__header,
+  .custom_select__header__error {
+    height: 54px;
+    padding: 16px ;
+  }
+
+  .input_label {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .custom_select__header,
+  .custom_select__header__error {
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  .custom_select__option {
+    &__text {
+      font-size: 14px;
+      font-weight: 400;
+      &:hover {
+        font-size: 14px;
+        font-weight: 700;
+      }
+    }
+
+    &_container,
+    &_container__error {
+      width: 100%;
+      top: 40px;
+    }
+  }
 }
