--- a/src/components/inputs/MultiSelect/MultiSelect.module.scss
+++ b/src/components/inputs/MultiSelect/MultiSelect.module.scss
@@ -4,7 +4,6 @@
 
 .input_container {
   position: relative;
-  background-color: white;
   height: 100%;
 }
 
@@ -216,12 +215,59 @@
       text-align: center;
       width: 100%;
       margin-left: -16px;
-
-
     }
   }
 }
 
-.custom_select__active .custom_select__error_message{
+.custom_select__active
+  .custom_select__error_message {
   display: none;
+}
+
+@media screen and (max-width: 700px) {
+  .custom_select,
+  .custom_select__active {
+    height: 54px;
+
+    &__header_option {
+      max-height: 36px;
+    }
+
+    &__option_item {
+      max-height: 36px;
+      padding: 8px 22px;
+    }
+  }
+
+  .custom_select__header,
+  .custom_select__header__error {
+    height: 54px;
+  }
+
+  .input_label {
+    font-size: 14px;
+    font-weight: 700;
+  }
+
+  .custom_select__header,
+  .custom_select__header__error {
+    font-size: 14px;
+    font-weight: 400;
+  }
+
+  .custom_select__option {
+    &__text {
+      font-size: 14px;
+      font-weight: 400;
+      &:hover {
+        font-size: 14px;
+        font-weight: 700;
+      }
+    }
+
+    &_container,
+    &_container__error {
+      top: 40px;
+    }
+  }
 }
