--- a/src/components/inputs/ReusableTextArea/ReusableTextArea.module.scss
+++ b/src/components/inputs/ReusableTextArea/ReusableTextArea.module.scss
@@ -25,7 +25,8 @@
   text-align: left;
 }
 
-.input_text, .input_text__error {
+.input_text,
+.input_text__error {
   width: 100%;
   border-radius: 10px;
   border: 1px solid #c0c0c0;
@@ -34,7 +35,8 @@
   box-sizing: border-box;
   height: 100%;
   position: relative;
-  &:active,&:focus {
+  &:active,
+  &:focus {
     border: 1px solid #008eff;
     background: #fff;
     box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
@@ -65,6 +67,13 @@
     color: red;
     text-align: center;
     width: 100%;
+  }
+}
 
+@media screen and (max-width: 700px) {
+  .input_text,
+  .input_text__error {
+    padding:16px;
+    min-height: 120px;
   }
 }
