--- a/src/components/layout/SideBar/SideBar.module.scss
+++ b/src/components/layout/SideBar/SideBar.module.scss
@@ -13,6 +13,10 @@
   background: #1f263e;
   box-sizing: border-box;
 
+  &_menu {
+    display: none;
+  }
+
   .header {
     color: $white;
     font-family: Oxygen;
@@ -44,6 +48,48 @@
     .logo {
       width: 103px;
       height: 28px;
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .sidebar {
+    width: 100%;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
+
+    &_menu {
+      display: block;
+      border-radius: 8px;
+      background: #293354;
+      width: 45px;
+      height: 45px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      left: 40px;
+      bottom: 15px;
+      cursor: pointer;
+    }
+
+    .logo_container {
+      display: flex;
+      width: max-content;
+      flex-direction: row;
+      width: calc(100% + 20px);
+      justify-content: center;
+      margin-left: -20px;
+      padding-left: 40px;
+      margin-top: 20px;
+      position: relative;
+      padding-bottom: 15px;
+      .logo {
+        width: 124.777px;
+        height: 33.923px;
+      }
     }
   }
 }
