--- a/src/components/layout/WhiteBoard/WhiteBoard.module.scss
+++ b/src/components/layout/WhiteBoard/WhiteBoard.module.scss
@@ -20,6 +20,17 @@
     justify-content: right;
   }
 
+  &__header_back {
+    &__mobile {
+      display: none;
+      position: absolute;
+      top: 15px;
+      left: 11px;
+      width: 40px;
+      cursor: pointer;
+    }
+  }
+
   &__section_header {
     display: flex;
     align-items: flex-start;
@@ -40,16 +51,16 @@
       width: 40px;
       gap: 6px;
       cursor: pointer;
-
-      & div {
-        color: #6583dd;
-        font-family: Oxygen;
-        font-size: 13px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 10px; /* 76.923% */
-      }
     }
+  }
+
+  &__button_text {
+    color: #6583dd;
+    font-family: Oxygen;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 10px; /* 76.923% */
   }
 
   &__navigation {
@@ -78,5 +89,64 @@
     background: $white;
     margin: 0 auto;
     position: relative;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .white_board {
+    padding-top: 0px;
+
+    &__navigation {
+      display: none;
+    }
+
+    &__content {
+      width: 100%;
+      height: max-content;
+      border: none;
+      box-shadow: none;
+      background: #f3f6fe;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      height: 100vh;
+    }
+    &__header_back__mobile {
+      display: flex;
+      width: max-content;
+      align-items: center;
+      gap: 5px;
+      left: 21px;
+    }
+
+    &__header__pointer {
+      background-color: #1F263E;
+      border-radius: 50%;
+      width: 26px;
+      height: 26px;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    &__section_header {
+      align-items: center;
+      justify-content: center;
+      &__header_back {
+        display: none;
+      }
+    }
+    &__button_text {
+      color: #1F263E;
+      font-feature-settings: 'clig' off,
+        'liga' off;
+      font-family: Roboto;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+    }
   }
 }
