--- a/src/pages/AddArtist/AddArtist.module.scss
+++ b/src/pages/AddArtist/AddArtist.module.scss
@@ -24,3 +24,26 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
 }
+
+@media screen and (max-width: 700px) {
+  .inputs_container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    box-sizing: border-box;
+    padding-left: 18px;
+    padding-right: 18px;
+    padding-bottom: 18px;
+  }
+  .input_col_container {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .input_col_container__age {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+  }
+}
