feat: minor fixes (#52)

--- a/src/components/inputs/MultiSelect/MultiSelect.module.scss
+++ b/src/components/inputs/MultiSelect/MultiSelect.module.scss
@@ -135,6 +135,7 @@
     height: max-content;
     border: 1px solid #c0c0c0;
     box-sizing: border-box;
+    background: white;
   }
 
   &__text {
