--- a/src/components/inputs/ReusableTextInput/ReusableTextInput.module.scss
+++ b/src/components/inputs/ReusableTextInput/ReusableTextInput.module.scss
@@ -35,6 +35,7 @@
   box-sizing: border-box;
   height: 100%;
   position: relative;
+
   &:active,
   &:focus {
     border: 1px solid #008eff;
@@ -57,6 +58,7 @@
 
 .input_text__error {
   border: 1px solid red;
+  
   &:active,
   &:focus {
     border: 1px solid red;
@@ -68,5 +70,8 @@
     text-align: center;
     width: 100%;
     margin-left: -16px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
   }
 }
