fix: white text (#62)

--- a/src/components/inputs/InputWithImage/InputWithImage.module.scss
+++ b/src/components/inputs/InputWithImage/InputWithImage.module.scss
@@ -12,26 +12,41 @@
   margin-bottom: 17px;
   padding-left: 34px;
   box-sizing: border-box;
+  color: #0C0C0C;
+
 
   &:focus {
     border: 1px solid #8ac0ff;
     outline: none;
+    color: #0C0C0C;
+    background: $white;
+
+
   }
 
   &:active {
     border: 1px solid #8ac0ff;
     outline: none;
+    color: #0C0C0C;
+    background: $white;
+
+
 
   }
   &:hover {
     border: 1px solid #8ac0ff;
     outline: none;
+    color: #0C0C0C;
+    background: $white;
+
+
 
   }
 }
 
 .input_container {
   position: relative;
+  color: #0C0C0C;
 
   & .input_icon {
     position: absolute;
@@ -40,6 +55,7 @@
 
   &__field {
     @include Input;
+
 
     &_error {
       @include Input;
