feat: payment info connected (#64)

--- a/src/components/lists/TableList/TableList.module.scss
+++ b/src/components/lists/TableList/TableList.module.scss
@@ -7,6 +7,10 @@
   width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
+  &__empty{
+    opacity: 0;
+  }
+
 
   &__head {
     width: 100%;
