--- a/src/components/layout/WhiteBoard/WhiteBoard.module.scss
+++ b/src/components/layout/WhiteBoard/WhiteBoard.module.scss
@@ -110,7 +110,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      height: 100vh;
+      height: max-content;
     }
     &__header_back__mobile {
       display: flex;
@@ -121,7 +121,7 @@
     }
 
     &__header__pointer {
-      background-color: #1F263E;
+      background-color: #1f263e;
       border-radius: 50%;
       width: 26px;
       height: 26px;
@@ -139,7 +139,7 @@
       }
     }
     &__button_text {
-      color: #1F263E;
+      color: #1f263e;
       font-feature-settings: 'clig' off,
         'liga' off;
       font-family: Roboto;
