--- a/src/pages/AddGallery/AddGallery.module.scss
+++ b/src/pages/AddGallery/AddGallery.module.scss
@@ -28,3 +28,23 @@
   width: 87px;
   height: 100%;
 }
+
+@media screen and (max-width: 700px) {
+  .inputs_container {
+    display: block;
+    padding-left: 16px;
+    padding-right: 16px;
+    &__textarea {
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-top: 0;
+      padding-bottom: 16px;
+      width: 100%;
+      box-sizing: border-box;
+    }
+  }
+  .input_col_container {
+    margin-bottom: 15px;
+    gap: 15px;
+  }
+}
