--- a/src/index.css
+++ b/src/index.css
@@ -18,13 +18,10 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-
-
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
- 
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 0s 600000s, color 0s 600000s;
 }
+
+
+
