--- a/src/components/inputs/Photo/Photo.module.scss
+++ b/src/components/inputs/Photo/Photo.module.scss
@@ -18,7 +18,6 @@
   @include PhotoInput;
   cursor: pointer;
 
-
   .photo_input__active {
     @include PhotoInput;
     border-radius: 10px;
@@ -60,6 +59,7 @@
   }
 
   &__img {
+    cursor: pointer;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -68,5 +68,6 @@
     cursor: pointer;
     border-radius: 10px;
     border: 4px solid white;
+    object-fit: cover;
   }
 }
