--- a/src/components/inputs/SelectSearch/SelectSearch.module.scss
+++ b/src/components/inputs/SelectSearch/SelectSearch.module.scss
@@ -87,6 +87,12 @@
   z-index: 4;
   box-shadow: 0px 1px 6px 0px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+
+  .input_search_container input{
+    border: 1px solid #008eff;
+
+
+  }
 }
 
 .input_label {
