--- a/src/components/buttons/SectionHeaderButton/SectionHeaderButton.module.scss
+++ b/src/components/buttons/SectionHeaderButton/SectionHeaderButton.module.scss
@@ -11,7 +11,7 @@
   gap: 10px;
   border-radius: 6px;
   background: #ff9700;
-  height: auto;
+  height: 100%;
   border: none;
   padding: 13px 0;
   cursor: pointer;
